[gd_scene load_steps=5 format=3 uid="uid://d2vo5qs76qetg"]

[ext_resource type="Script" uid="uid://hidptdq65pvs" path="res://scripts/hud.gd" id="1_37p78"]
[ext_resource type="Texture2D" uid="uid://nnp1ahiwv83i" path="res://models/ui/star.png" id="2_5ysmq"]
[ext_resource type="Texture2D" uid="uid://djbsce5xgg8n7" path="res://models/ui/heart.png" id="3_6fi6k"]
[ext_resource type="Texture2D" uid="uid://cxwogoj04ac0m" path="res://models/ui/passkey.png" id="4_6fi6k"]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_37p78")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1042.0
offset_top = 18.0
offset_right = -987.0
offset_bottom = 73.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "x 0"

[node name="LivesLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_top = 18.0
offset_right = -49.0
offset_bottom = 73.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "x 3"

[node name="CoinIcon" type="TextureRect" parent="."]
offset_left = 42.0
offset_top = 17.0
offset_right = 102.0
offset_bottom = 77.0
texture = ExtResource("2_5ysmq")
expand_mode = 1

[node name="LifeIcon" type="TextureRect" parent="."]
offset_left = 980.0
offset_top = 17.0
offset_right = 1040.0
offset_bottom = 77.0
texture = ExtResource("3_6fi6k")
expand_mode = 1

[node name="KeyIcon" type="TextureRect" parent="."]
visible = false
offset_left = 1025.0
offset_top = 87.0
offset_right = 1075.0
offset_bottom = 137.0
texture = ExtResource("4_6fi6k")
expand_mode = 1

[node name="GameOver" type="Label" parent="."]
visible = false
offset_left = 333.0
offset_top = 275.0
offset_right = 811.0
offset_bottom = 385.0
theme_override_colors/font_color = Color(0.80126345, 4.1151793e-06, 8.663535e-07, 1)
theme_override_font_sizes/font_size = 80
text = "Game Over!!"

[node name="Win" type="Label" parent="."]
visible = false
offset_left = 460.0
offset_top = 40.0
offset_right = 719.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(0, 0.64749455, 0.2074914, 1)
theme_override_font_sizes/font_size = 50
text = "YOU WON!"
